feat: adding search by name
