# routes/product.routes.js
@@ -4,6 +4,7 @@ const controller = require('../src/controller/productController');
 const validateProduct = require('../src/middlewares/validateProduct');
 
 router.get('/', controller.getAll);
+router.get('/name/:name', controller.getByName);
 router.get('/:id', controller.getById);
 router.post('/', validateProduct, controller.create);
 router.put('/:id', validateProduct, controller.update);
